Added basic styling, added proptypes, fixed React router implementation, closes #3, addresses #2 and AB#33

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,4 +1,24 @@
-nav {
-    height: 100%;
-    width: 100%;
+.Container {
+  height: 80%;
+}
+
+.NavTitle {
+  color: white;
+  margin-left: 10px;
+}
+
+.NavElements {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.NavButtons {
+  background-color: tomato;
+  margin-right: 20px;
+}
+
+.InstitutionalImagesContainer {
+  background-color: #EFEFEF;
+  flex: 1;
 }
