--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
 html, body { min-height: 100%; margin: 0; }
 
 header {
+  display: flex;
   background-color: blue;
+  flex-direction: column;
+  min-height: 100px;
+}
+
+nav {
+  background-color: #1A237E;
+  flex: 0.5;
 }
 
 h1 { margin: 0; font-family: 'Montserrat', sans-serif; }
