--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,16 @@ html, body { min-height: 100%; margin: 0; }
 
 header {
   display: flex;
-  background-color: blue;
   flex-direction: column;
   min-height: 100px;
 }
 
 nav {
   background-color: #1A237E;
-  flex: 0.5;
 }
 
-h1 { margin: 0; font-family: 'Montserrat', sans-serif; }
+a { text-decoration: none; color: white; font-weight: bold; font-size: 0.9em; }
+h1 { font-size: 1.2em; }
+a, h1 { margin: 0; font-family: 'Montserrat', sans-serif; }
 
 p { margin: 0; font-family: 'Open Sans', sans-serif; }
