--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -11,14 +11,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex: 0.5;
 }
 
 .NavButtons {
-  background-color: tomato;
   margin-right: 20px;
+  display: flex;
 }
 
 .InstitutionalImagesContainer {
   background-color: #EFEFEF;
-  flex: 1;
+  flex: 0.5;
 }
