--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body { min-height: 100%; margin: 0; }
+
+header {
+  display: flex;
+  flex-direction: column;
+  min-height: 100px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav {
+  background-color: #1A237E;
 }
+
+a { text-decoration: none; color: white; font-weight: bold; font-size: 0.9em; }
+h1 { font-size: 1.2em; }
+a, h1 { margin: 0; font-family: 'Montserrat', sans-serif; }
+
+p { margin: 0; font-family: 'Open Sans', sans-serif; }
