--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-html, body { min-height: 100%; margin: 0; }
+html, body { min-height: 100vh; margin: 0; }
 
 header {
+  background-color: lime;
   display: flex;
   flex-direction: column;
-  min-height: 100px;
 }
 
 nav {
@@ -12,6 +12,7 @@ nav {
 
 a { text-decoration: none; color: white; font-weight: bold; font-size: 0.9em; }
 h1 { font-size: 1.2em; }
-a, h1 { margin: 0; font-family: 'Montserrat', sans-serif; }
-
+a, label, h1 { margin: 0; font-family: 'Montserrat', sans-serif; }
+label { font-weight: bold; font-size: 1em; }
+input { border: none; background: transparent; outline: 0; margin-top: 10px; }
 p { margin: 0; font-family: 'Open Sans', sans-serif; }
