--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,9 +2,28 @@
   display: flex;
 }
 
-.HomeArticle {
+.HomeSection {
   display: flex;
   width: 30vw;
+}
+
+.HomeButton {
+  width: 25%;
+  height: 20%;
+}
+
+.HomeButtons {
+  height: 25%;
+  display: flex;
+  margin-top: 10%;
+  justify-content: space-evenly;
+}
+
+.HomeArticle {
+  display: flex;
+  flex-direction: column;
+  height: 95%;
+  width: 100%;
 }
 
 .SelectImages {
