--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,14 @@ nav {
   background-color: #1A237E;
 }
 
-a { text-decoration: none; color: white; font-weight: bold; font-size: 0.9em; }
+a, button { text-decoration: none; color: white; font-weight: bold; font-size: 0.9em; }
 h1 { font-size: 1.2em; }
-a, label, h1 { margin: 0; font-family: 'Montserrat', sans-serif; }
+a, label, h1, button { margin: 0; font-family: 'Montserrat', sans-serif; }
 label { font-weight: bold; font-size: 1em; }
 input { border: none; background: transparent; outline: 0; margin-top: 10px; }
 p { margin: 0; font-family: 'Open Sans', sans-serif; }
+button { padding: 0; border: none; background: none; }
+button:hover { background-color: white; }
 
 .BaseButton {
   background-color: #1A237E;
