--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -47,9 +47,24 @@
 
 .SelectImageForm {
   display: flex;
+  height: 50%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.SelectedImagesContainer {
+  display: flex;
+  width: 100%;
+  height: 50%;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.SelectedImage {
+  height: 95%;
+  width: 30%;
 }
 
 #Draggeable.highlight {
