--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,9 @@ nav {
 }
 
 a, button { text-decoration: none; color: white; font-weight: bold; font-size: 0.9em; }
-h1 { font-size: 1.2em; }
-a, label, h1, button { margin: 0; font-family: 'Montserrat', sans-serif; }
+h1, h2 { font-size: 1.2em; }
+h2 { font-size: 1.1em; }
+a, label, h1, button, h2 { margin: 0; font-family: 'Montserrat', sans-serif; }
 label { font-weight: bold; font-size: 1em; }
 input { border: none; background: transparent; outline: 0; margin-top: 10px; }
 p { margin: 0; font-family: 'Open Sans', sans-serif; }
@@ -22,7 +23,10 @@ button:hover { background-color: white; }
 .BaseButton {
   background-color: #1A237E;
   border-radius: 5px;
-  display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.Flex {
+  display: flex;
 }
