--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import '~loaders.css/loaders.min.css';
+
 html, body { min-height: 100vh; margin: 0; }
 
 header {
@@ -31,6 +33,17 @@ button {
   border-radius: 5px;
   justify-content: center;
   align-items: center;
+}
+
+.Overlay {
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .MediumButton {
